--- a/css/car-full-information.css
+++ b/css/car-full-information.css
@@ -1,1 +1,620 @@
-/* No CSS */
+.car-full-information {
+  position: relative;
+}
+
+.car-full-information__btn-back-to-search {
+  padding: 20px 0;
+}
+
+.car-full-information__btn-back-to-search p {
+  cursor: pointer;
+  padding-left: 30px;
+  position: relative;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+}
+
+.car-full-information__btn-back-to-search p::before {
+  position: absolute;
+  content: url("/images/pages/car-full-information/arrow_back.svg");
+  width: 20px;
+  height: 20px;
+  top: 0;
+  left: 0;
+}
+
+.car-full-information__image-and-form {
+  display: flex;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.car-full-information-image-block {
+  flex-basis: 50%;
+  box-sizing: border-box;
+  width: 70%;
+}
+
+.car-full-information-image-block-header {
+  margin-bottom: 15px;
+  display: flex;
+}
+
+.car-full-information-image-block-header__item {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10px;
+}
+
+.car-full-information-image-block-header__item:first-child {
+  margin-left: 0;
+}
+
+.car-full-information-image-block-header__item img {
+  padding: 2px;
+  opacity: 0.7;
+  margin-bottom: 10px;
+}
+
+.car-full-information-image-block-header__item p {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  /* Gray 3 */
+  color: #828282;
+}
+
+.car-full-information-image-block-header__item.active img {
+  border: 2px solid #ed1c24;
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding: 1px;
+}
+
+.car-full-information-image-block-header__item.active p {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  color: #000000;
+}
+
+.car-full-information-image-block-image-car-features {
+  margin-top: 20px;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.car-full-information-image-block-image-car-features__item {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+}
+
+.car-full-information-image-block-image-car-features__item img {
+  margin: 0 auto 5px;
+  max-width: 60px;
+  width: 100%;
+}
+
+.car-full-information-image-block-image-car-features__item p {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #000000;
+}
+
+.car-full-information-form {
+  margin-left: 40px;
+  width: 100%;
+  min-width: 300px;
+}
+
+.main-car-full-information .cars-in-stock-result-car-list__item {
+  height: calc(100% - 135px);
+}
+
+.main-car-full-information .cars-in-stock-result-car-list__car-name {
+  padding-top: 20px;
+  margin-bottom: 20px;
+}
+
+.main-car-full-information .cars-in-stock-result-car-list__additional-prices-block .switch-appraise {
+  border-left: none;
+  border-right: none;
+  border-top: 2px solid;
+  border-image: linear-gradient(to right, #fff, #b6b5b5, #b6b5b5, #fff) 47% 0%;
+  border-image-slice: 1;
+}
+
+.main-car-full-information .cars-in-stock-result-car-list__additional-prices-block .switch-credit,
+.main-car-full-information .cars-in-stock-result-car-list__additional-prices-block .switch-appraise {
+  padding: 15px 0;
+}
+
+.main-car-full-information .cars-in-stock-result-car-list__additional-prices-block .switch-credit label:last-child {
+  display: flex;
+}
+
+.main-car-full-information .cars-in-stock-result-car-list__additional-prices-block .switch-credit label div {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  /* identical to box height */
+  color: #000000;
+}
+
+.main-car-full-information .cars-in-stock-result-car-list__additional-prices-block .switch-credit label div:last-child {
+  margin-left: 5px;
+}
+
+.main-car-full-information .cars-in-stock-result-car-list__additional-prices-block .switch-credit label div:last-child span {
+  padding: 0px 5px;
+  font-size: 16px;
+}
+
+.main-car-full-information .cars-in-stock-result-car-list__location {
+  padding-bottom: 50px;
+}
+
+.switch-appraise__btn-reserve {
+  padding: 0 20px;
+}
+
+.btn-reserve {
+  background: #000000;
+  border-radius: 2px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  text-align: center;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.similar-cars {
+  margin-top: 50px;
+}
+
+.similar-cars__title {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+  margin-bottom: 5px;
+}
+
+.similar-cars .certified-special-offer-list {
+  justify-content: space-between;
+}
+
+.similar-cars .certified-special-offer-list__item {
+  margin: 5px;
+  max-width: 355px;
+}
+
+.dealer-location {
+  margin: 30px 0;
+  background: #000000;
+  border-radius: 10px 0px 0px 10px;
+  display: flex;
+}
+
+.dealer-location__info {
+  padding: 25px;
+  flex-basis: 70%;
+}
+
+.dealer-location__info ul li,
+.dealer-location__info ul a {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  color: #ffffff;
+}
+
+.dealer-location__info ul li {
+  margin: 20px 0;
+  position: relative;
+  padding-left: 40px;
+}
+
+.dealer-location__info ul li::before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  content: url("/images/pages/car-full-information/dealer-location/loc.svg");
+}
+
+.dealer-location__info ul li:nth-child(2) a:hover {
+  color: #ed1c24;
+}
+
+.dealer-location__info ul li:nth-child(2)::before {
+  content: url("/images/pages/car-full-information/dealer-location/phone.svg");
+}
+
+.dealer-location__info ul li:nth-child(3)::before {
+  content: url("/images/pages/car-full-information/dealer-location/today.svg");
+}
+
+.dealer-location__info ul li:last-child {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+}
+
+.dealer-location__info ul li:last-child::before {
+  display: none;
+}
+
+.dealer-location__map {
+  flex-basis: 30%;
+}
+
+/* -----------slider----- */
+.swiper-slider {
+  max-width: 453px;
+}
+
+.swiper-slide img {
+  width: 100%;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #fff;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+  padding: 20px 10px;
+}
+
+.swiper-pagination .swiper-pagination-bullet {
+  border-radius: 0;
+  background: #dedede;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  padding: 5px;
+  opacity: 1;
+}
+
+.swiper-pagination .swiper-pagination-bullet-active {
+  background: #ed1c24;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+}
+
+.features-cars-block {
+  margin-top: 31px;
+}
+
+.features-cars-block__list ul {
+  display: flex;
+  align-items: center;
+}
+
+.features-cars-block__list ul li {
+  padding: 15px 25px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #828282;
+  border-radius: 10px 10px 0 0;
+  cursor: pointer;
+}
+
+.features-cars-block__list ul li:hover {
+  color: #000;
+  text-decoration: underline;
+}
+
+.features-cars-block__list ul li.active {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #000000;
+  background: #ffffff;
+  border-radius: 10px 10px 0 0;
+}
+
+.features-cars-block-content {
+  background: #ffffff;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.features-cars-block-content__key-options, .features-cars-block-content__fully-equipped, .features-cars-block-content__features, .features-cars-block-content__service-history, .features-cars-block-content__certificate-of-inspection {
+  padding: 15px 25px;
+}
+
+.features-cars-block-content__key-options li, .features-cars-block-content__fully-equipped li, .features-cars-block-content__features li, .features-cars-block-content__service-history li, .features-cars-block-content__certificate-of-inspection li {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+  padding: 15px 0;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid;
+  border-image: linear-gradient(to right, #fff, #b6b5b5, #b6b5b5, #fff) 47% 0%;
+  border-image-slice: 1;
+}
+
+.features-cars-block-content__key-options li:last-child, .features-cars-block-content__fully-equipped li:last-child, .features-cars-block-content__features li:last-child, .features-cars-block-content__service-history li:last-child, .features-cars-block-content__certificate-of-inspection li:last-child {
+  border: none;
+}
+
+.features-cars-block-content__fully-equipped {
+  display: none;
+}
+
+.features-cars-block-content__features {
+  display: none;
+}
+
+.features-cars-block-content__service-history {
+  display: none;
+}
+
+.features-cars-block-content__certificate-of-inspection {
+  display: none;
+}
+
+.features-cars-block-content__accord {
+  display: none;
+}
+
+.mobile {
+  display: none;
+}
+
+/* --------------callback-------------- */
+.shadow-block {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(37, 36, 36, 0.829);
+  z-index: 10;
+}
+
+.callback-form {
+  display: none;
+  font-family: Montserrat;
+  color: #000000;
+  max-width: 940px;
+  width: 100%;
+  background: #F3F3F3;
+  position: fixed;
+  z-index: 11;
+  left: calc(50% - 940px / 2);
+  top: 100px;
+}
+
+.callback-form__wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 30px;
+  align-self: center;
+  justify-self: center;
+}
+
+.callback-form__wrapper .circle {
+  margin: 0 4px;
+}
+
+.callback-form-car-info__wrapper {
+  max-width: 343px;
+  width: 100%;
+}
+
+.callback-form-car-info__car-name {
+  margin-bottom: 12px;
+}
+
+.callback-form-car-info__car-name h3 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+  text-transform: uppercase;
+  color: #000000;
+}
+
+.callback-form-car-info__car-first-price {
+  margin-bottom: 15px;
+}
+
+.callback-form-car-info__car-first-price p {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 29px;
+  color: #000000;
+}
+
+.callback-form-car-info__car-first-price p span {
+  font-size: 24px;
+  line-height: 22px;
+  color: #000000;
+}
+
+.callback-form-car-info__features {
+  margin-bottom: 20px;
+}
+
+.callback-form-car-info__features .margint {
+  margin-top: 20px;
+}
+
+.callback-form-car-info__location {
+  padding: 0;
+  margin-bottom: 30px;
+}
+
+.callback-form-car-info__location p a {
+  font-size: 14px;
+  line-height: 17px;
+  color: #4F4F4F;
+}
+
+.callback-form-car-info-price-info {
+  background: #DEDEDE;
+  padding: 20px;
+}
+
+.callback-form-car-info-price-info__car-price, .callback-form-car-info-price-info__you-car-price {
+  margin-bottom: 20px;
+}
+
+.callback-form-car-info-price-info__car-price p, .callback-form-car-info-price-info__you-car-price p {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  color: #828282;
+}
+
+.callback-form-car-info-price-info__car-price div, .callback-form-car-info-price-info__you-car-price div {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.callback-form-car-info-price-info__car-price div p:first-child, .callback-form-car-info-price-info__you-car-price div p:first-child {
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+  margin-bottom: 5px;
+}
+
+.callback-form-car-info-price-info__car-price div p:last-child, .callback-form-car-info-price-info__you-car-price div p:last-child {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+}
+
+.callback-form-car-info-price-info__benefits h4 {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+  margin-bottom: 12px;
+}
+
+.callback-form-car-info-price-info__benefits-for-month, .callback-form-car-info-price-info__benefits-for-trade-in {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.callback-form-car-info-price-info__benefits-for-month p:first-child, .callback-form-car-info-price-info__benefits-for-trade-in p:first-child {
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+}
+
+.callback-form-car-info-price-info__benefits-for-month p:last-child, .callback-form-car-info-price-info__benefits-for-trade-in p:last-child {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+}
+
+.callback-form-form__wrapper h3 {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+  margin-bottom: 22px;
+}
+
+.callback-form-form__wrapper form {
+  box-sizing: border-box;
+}
+
+.callback-form-form__wrapper form p {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+  margin-bottom: 2px;
+}
+
+.callback-form-form__wrapper form p span {
+  margin-left: 3px;
+  font-size: 16px;
+  color: #ED1C24;
+}
+
+.callback-form-form__wrapper form input {
+  padding: 10px;
+  margin-bottom: 20px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.callback-form-form__wrapper form input:focus {
+  outline: none;
+}
+
+.callback-form-form__wrapper form textarea {
+  width: 100%;
+  height: 140px;
+  resize: none;
+  margin-bottom: 20px;
+}
+
+.callback-form-form__wrapper form textarea:focus {
+  outline: none;
+}
+
+.callback-form-form__wrapper form button {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 150%;
+  color: #FFFFFF;
+  margin: 0px 5px;
+  padding: 9px 20px;
+  background: #000000;
+  border: solid 1px black;
+}
+
+.callback-form-form__wrapper form button:active {
+  border: solid 1px black;
+  box-shadow: 0 0 4px black;
+}
